public/c/layout.app-0.1.css
/* ... */
@media only screen and (max-width: 480px) {
	.showchannels #listChat {}
	.showcomments #listGroups {left:-260px}
	#listArticle > article {left:5px; right:5px; top:0px; bottom:5px; }
	
	.inlineForm label {width:100%; margin-right:0%; text-align:left; padding:0 0 5px 0}
	.inlineForm .formEl {width:100%; max-width:100%}
	.detailHead h1 {font-size:1.6em}
	.inlineForm .formActions button:first-child {margin-left:0}
}
@media only screen and (min-width: 480px) {
	#main {left:45px}
	.no-csstransforms .showcomments #main {left:-215px;}
	.csstransforms .showchannels #main {-moz-transform: translate(215px, 0px); -webkit-transform: translate(215px, 0px); -o-transform: translate(215px, 0px); -ms-transform: translate(215px, 0px); transform: translate(215px, 0px);}
	.csstransforms .showcomments #main {-moz-transform: translate(-260px, 0px); -webkit-transform: translate(-260px, 0px); -o-transform: translate(-260px, 0px); -ms-transform: translate(-260px, 0px); transform: translate(-260px, 0px);}

	#navSearch input {width: 0px;}
	.showchannels #navSearch input {width: 100%;}
	#listArticle > article {left:50px;}
}
@media only screen and (min-width: 620px) {
	#main {right:45px}
	.no-csstransforms .showchannels #main {left:260px; right:-215px}
	.no-csstransforms .showcomments #main {left:-215px; right: 260px}

	.csstransforms .showcomments #main {-moz-transform: translate(-215px, 0px); -webkit-transform: translate(-215px, 0px); -o-transform: translate(-215px, 0px); -ms-transform: translate(-215px, 0px); transform: translate(-215px, 0px);}

	#listChat .content form input {width:22px; left:215px}
	#listChat .content form textarea {width:25px; left:215px}
	.showcomments #listChat .content form input {width:238px; left:0}
	.showcomments #listChat .content form textarea {width:240px; left:0}
	#listArticle > article {left:50px; right:50px}
}

@media only screen and (min-width: 780px) {
	.detailItem .eventList {position:absolute; left:0; width:280px; padding-top:2px}
	.detailItem .articleList {padding:2px 2px 0 280px}
	
	#listArticle .narrowArticle {width:700px; left:50%; right:auto; margin:0 0 0 -350px}
}

@media only screen and (min-width: 1000px) {
	#main {left:260px;}
	.no-csstransforms .showchannels #main {left:260px; right:45px}
	.no-csstransforms .showcomments #main {left:45px; right: 260px}

	.csstransforms .showchannels #main {-moz-transform: translate(0px, 0px); -webkit-transform: translate(0px, 0px); -o-transform: translate(0px, 0px); -ms-transform: translate(0px, 0px); transform: translate(0px, 0px);}

	#listGroups {width:265px}
	#navSearch input {width:100%;}
	.show.channels {display:none}
	.showcomments .show.channels {display:inline-block}
}
@media only screen and (min-width: 1200px) {
	#main {right:260px}
	.no-csstransforms .showchannels #main {left:260px; right:260px}
	.no-csstransforms .showcomments #main {left:260px; right: 260px}
	.csstransforms .showcomments #main {-moz-transform: translate(0px, 0px); -webkit-transform: translate(0px, 0px); -o-transform: translate(0px, 0px); -ms-transform: translate(0px, 0px); transform: translate(0px, 0px);}

	#listChat {width:265px}
	#listChat .content form input, #listChat .content form textarea {width:240px; left:0}
	.show.comments {display:none}
}

@media only screen and (min-width: 1300px) {
	.articleItem {width:49.5%; vertical-align: top; min-height:200px;
	.articleItem.rss .content {height:4.2em}
}
}

